--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: go
 go: 
-  - 1.3.3
-  - 1.4.2
-  - 1.5.1
-  - release
-  - tip
+  - 1.6.x
+  - 1.8.x
+  - 1.9.x
+  - 1.10.x
+  - master
+
+install:
+  - go get ./...
 
 script:
   - go test -v ./...
