changed install in travis and changed go version needed

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: go
 go: 
-  - 1.6.x
+  - 1.7.x
   - 1.8.x
   - 1.9.x
   - 1.10.x
   - master
 
 install:
+  - go get github.com/gorilla/pat
   - go get ./...
 
 script:
