--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 
 install:
   - go get github.com/gorilla/pat
-  - github.com/stretchr/testify/assert
+  - go get github.com/stretchr/testify/assert
   - go get ./...
 
 script:
